Fixed width of the navbar to avoid wrapping, auto-redirection to /AboutMe on DOM load

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -10,7 +10,7 @@ body {
 .navContainer {
   display: flex;
   flex-direction: column;
-  width: 25%;
+  width: 30%;
 
   @apply ml-20 mt-5
 }
